syntax = "proto3";

package auth;

// ここはコンパイルエラーになる。
import "google/api/annotations.proto";

option go_package="authpb";

message LoginRequest{
    int32 num = 1;
}

message LoginResponse{
    int32 num = 1;
    string redirect_url = 2;
}

message CallBackRequest{
    string code = 1;
}

message CallBackResponse{
    string token = 1;
}

message VerifyTokenRequest{
    string token = 1;
}

message VerifyTokenResponse{
    bool is_logged_id = 1;
}

service AuthService{
    rpc Login(LoginRequest)returns(LoginResponse){
        option (google.api.http) = { 
            get: "/auth/login",
        };
    };
    rpc CallBack(CallBackRequest) returns(CallBackResponse){
        option (google.api.http) = {
            get: "/auth/callback/google",
        };
    };
    rpc VerifyToken(VerifyTokenRequest)returns (VerifyTokenResponse){
        option (google.api.http) = {
            get: "/auth/verify",
        };
    }
}